Rebranded to supertypo/NRK.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NRK Nett-TV</title>
+		<title>supertypo/NRK</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" href="app/stylesheets/Main.css" type="text/css">
 		<link rel="stylesheet" href="app/stylesheets/Menu.css" type="text/css">
